Adding a project name to the composer.json file.

--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,6 @@
 {
+	"name": "abfhp/abfhp",
+	"description": "A _____ For Horrible People",
 	"require": {
 		"php": "~5.3.13",
 		"laravel/framework": "4.1.*"
