Pushing update to composer.json to test out service hook to Packagist.

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
 	"name": "abfhp/abfhp",
 	"description": "A _____ For Horrible People",
+	"license": "MIT",
 	"require": {
 		"php": "~5.3.13",
 		"laravel/framework": "4.1.*"
