--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
 	],
 	"require": {
 		"php": "~5.3.13",
-		"laravel/framework": "4.1.*"
+		"laravel/framework": "4.1.*",
+		"abfhp/library": "*"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "3.7.*"
