--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
 	"require": {
 		"php": "~5.3.13",
 		"laravel/framework": "4.1.*",
-		"abfhp/library": "dev-master"
+		"abfhp/library": "~0.0.1"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "3.7.*"
