--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
 	"require": {
 		"php": ">=5.3.0",
 		"laravel/framework": "4.1.*",
-		"abfhp/horrible": "@dev"
+		"abfhp/horrible": "dev-master@dev"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "3.7.*"
