Ah, the fresh new commit...
Now re-committing everything. Larvel is now updated! Added a bunch of
models to get ready for the new features, and also added a migration file
to help build the entire database! I love you, Laravel.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
-# directories to ignore
+/bootstrap/compiled.php
 /vendor
-
-# files to ignore
+composer.phar
 composer.lock
+.env.*.php
+.env.php
+.DS_Store
+Thumbs.db
+.sass-cache
+
+#Things to not ignore
+!.env.default.php
